# esp-cryptoauthlib

./: CLAUDE.md  DIAGNOSIS_AND_FIX.md  I2C_NACK_DIAGNOSIS.md  LOCK_STATUS_COMMANDS.md  README.md  VERSION_INJECTION_GUIDE.md  WRITE_CONFIG_GUIDE.md  WRITE_DATA_GUIDE.md  write-conf-context.txt
cryptoauthlib/lib/: atca_basic.c
cryptoauthlib/lib/calib/: calib_basic.c  calib_execution.c
esp_cryptoauth_utility/: pyproject.toml  release.py  secure_cert_mfg.py
esp_cryptoauth_utility/firmware/: sdkconfig
esp_cryptoauth_utility/firmware/main/: CMakeLists.txt  app_main.c  cert_def_3_device_csr.c  commands.c  commands.h  handlers.c  handlers.h
esp_cryptoauth_utility/helper_scripts/: serial.py
notes/: 2025-11-07.md
